[package]
name = "nothing"
version = "0.1.4"
edition = "2021"
description = "Probably Nothing"
license = "MIT"
documentation = "https://docs.rs/nothing"
repository = "https://github.com/btwiuse/nothing"
homepage = "https://github.com/btwiuse/nothing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
